--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,7 +10,7 @@ jobs:
     - name: Setup dotnet ${{ matrix.dotnet-version }}
       uses: actions/setup-dotnet@v1.7.2
       with:
-        dotnet-version: 5.0
+        dotnet-version: "5.0"
         
     - name: Restore
       run: dotnet restore
