--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,6 +33,6 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        context: Pushinator.Web         
+        context: Timer        
         tags: takayoshisimizu/timer
         tag_with_ref: true
