--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,11 +28,14 @@ jobs:
       with:
           username: ${{ secrets.DOCKER_LOGIN }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-   
-    - name: Build and push
+
+    - name: Get short SHA
+      id: short_sha
+      run: echo "::set-output name=sha7::$(echo ${GITHUB_SHA} | cut -c1-7)"
+
+    - name: Build and push web
       uses: docker/build-push-action@v2
       with:
         push: true
-        context: Timer        
-        tags: takayoshisimizu/timer
-        tag_with_ref: true
+        context: Timer
+        tags: "takayoshisimizu/timer:${{ steps.short_sha.outputs.sha7 }}"
