Passing values from config

--- a/Timer/appsettings.json
+++ b/Timer/appsettings.json
@@ -6,5 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SecretValue": "secret_value",
+  "NotSecretValue": "not_so_secret_value"
 }
