--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,6 +22,14 @@ jobs:
     - name: Publish Timer
       run: dotnet publish --configuration Release
       working-directory: Timer
+      
+    - name: Build Timer Client
+      run: dotnet build --configuration Release
+      working-directory: TimerClient
+
+    - name: Publish Timer
+      run: dotnet publish --configuration Release
+      working-directory: TimerClient
 
     - name: Login to DockerHub
       uses: docker/login-action@v1 
@@ -33,9 +41,16 @@ jobs:
       id: short_sha
       run: echo "::set-output name=sha7::$(echo ${GITHUB_SHA} | cut -c1-7)"
 
-    - name: Build and push web
+    - name: Build and push timer
       uses: docker/build-push-action@v2
       with:
         push: true
         context: Timer
+        tags: "takayoshisimizu/timer:${{ steps.short_sha.outputs.sha7 }}"
+
+    - name: Build and push timer client
+      uses: docker/build-push-action@v2
+      with:
+        push: true
+        context: TimerClient
         tags: "takayoshisimizu/timer:${{ steps.short_sha.outputs.sha7 }}"
