--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,9 +27,17 @@ jobs:
       run: dotnet build --configuration Release
       working-directory: TimerClient
 
-    - name: Publish Timer
+    - name: Publish Timer Client
       run: dotnet publish --configuration Release
       working-directory: TimerClient
+      
+    - name: Build Timer Run
+      run: dotnet build --configuration Release
+      working-directory: TimerRun
+
+    - name: Publish Timer Run
+      run: dotnet publish --configuration Release
+      working-directory: TimerRun
 
     - name: Login to DockerHub
       uses: docker/login-action@v1 
@@ -54,3 +62,10 @@ jobs:
         push: true
         context: TimerClient
         tags: "takayoshisimizu/timer-client:${{ steps.short_sha.outputs.sha7 }}"
+        
+    - name: Build and push timer client
+      uses: docker/build-push-action@v2
+      with:
+        push: true
+        context: TimerRun
+        tags: "takayoshisimizu/timer-run:${{ steps.short_sha.outputs.sha7 }}"
