Remove timer client, add grpc

--- a/TimerClient/TimerClient.csproj
+++ b/TimerClient/TimerClient.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Timer.Proto\Timer.Proto.csproj" />
     </ItemGroup>
 
     <ItemGroup>
